--- a/client/main.css
+++ b/client/main.css
@@ -1,47 +1,18 @@
-/* CSS declarations go here */
-body {
-  font-family: sans-serif;
-  background-color: #315481;
-  background-image: linear-gradient(to bottom, #315481, #918e82 100%);
-  background-attachment: fixed;
- 
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
- 
-  padding: 0;
-  margin: 0;
- 
-  font-size: 14px;
-}
- 
-header {
-  background: #d2edf4;
-  background-image: linear-gradient(to bottom, #d0edf5, #e1e5f0 100%);
-  padding: 20px 15px 15px 15px;
-  position: relative;
-}
-
 h1 {
     margin: 0;
 }
- 
-ul {
-  margin: 0;
-  padding: 0;
-  background: white;
-}
- 
-li {
-  position: relative;
-  list-style: none;
-  padding: 15px;
-  border-bottom: #eee solid 1px;
+
+h2 {
+    margin-top: 0;
+    font-size: 1.5em;
 }
 
 .thumbnail {
-    height:300px;
-    word-wrap:break-word;
+    height: 220px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.caption p a {
+    text-decoration: none;
 }
