CSS file has been corrected

--- a/client/main.css
+++ b/client/main.css
@@ -32,7 +32,7 @@ h2 {
 
 #search .form-group,
 #vacancies-num .label-success,
-.navbar-fixed-bottom .navbar-link{
+.navbar-fixed-bottom .navbar-collapse .navbar-link{
     margin-right: 5px;
 }
 
